--- a/_posts/2024-07-16-DragText.md
+++ b/_posts/2024-07-16-DragText.md
@@ -2,6 +2,8 @@
 layout: post
 author: noonddudung2
 tags: [image Editing, diffusion models, text optimization]
+published: false
+
 ---
 # DragText: Rethinking Text Embedding in Point-based Image Editing
 - [DragText Paper](https://arxiv.org/abs/2407.17843)
